[package]
name = "try_gluon"
version = "0.5.0"
authors = ["Markus <marwes91@gmail.com>"]

license = "MIT"

edition = "2018"

[workspace]
members = ["gluon_master"]

[[bin]]
name = "try_gluon"
path = "src/app/main.rs"

[dependencies]
env_logger = "0.7"
failure = "0.1"
futures = { version = "0.3", features = ["compat"] }
hubcaps = { version = "0.5", git = "https://github.com/Marwes/hubcaps", branch = "std_future" }
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "0.2", features = ["signal", "rt-core", "rt-threaded"] }
hyper = "0.13"

gluon = { version = "0.15", features = ["serialization", "web", "regex", "rand"] }
gluon_codegen = { version = "0.15" }

#gluon = { path = "../gluon", features = ["serialization", "web", "regex", "rand"] }
#gluon_codegen = { path = "../gluon/codegen" }

gluon_master = { path = "gluon_master" }
gluon_crates_io = { path = "gluon_crates_io" }

[build-dependencies]
env_logger = "0.7"
failure = "0.1"
glob = "0.3"
home = "0.5"
regex = "1"

gluon_master = { path = "gluon_master" }
gluon_crates_io = { path = "gluon_crates_io" }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
