[package]
name = "try_gluon"
version = "0.5.0"
authors = ["Markus <marwes91@gmail.com>"]

license = "MIT"

edition = "2018"

default-run = "try_gluon"

[workspace]
members = ["gluon_master"]

[[bin]]
name = "try_gluon"
path = "src/app/main.rs"

[[bin]]
name = "generate_docs"
required-features = ["glob", "home"]

[dependencies]
aws_lambda_events = "0.3"
env_logger = "0.7"
anyhow = "1"
futures = "0.3"
hubcaps = { version = "0.5", git = "https://github.com/Marwes/hubcaps", branch = "std_future" }
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", package = "lambda" }
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "0.2", features = ["signal", "rt-core", "rt-threaded"] }
toml = "0.5"
hyper = "0.13"

gluon = { version = "0.17.2", features = ["serialization", "regex", "rand", "web"] }
gluon_codegen = { version = "0.17.2" }

#gluon = { path = "../gluon", features = ["serialization", "web", "regex", "rand"] }
#gluon_codegen = { path = "../gluon/codegen" }

gluon_master = { path = "gluon_master" }
gluon_crates_io = { path = "gluon_crates_io" }


glob = { version = "0.3", optional = true }
home = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }

[features]
server = ["gluon/web"]

[patch.crates-io]
# gluon = { version = "0.17", path = "../gluon" }
# gluon_base = { version = "0.17", path = "../gluon/base" }
# gluon_check = { version = "0.17", path = "../gluon/check" }
# gluon_vm = { version = "0.17", path = "../gluon/vm" }
# gluon_doc = { version = "0.17", path = "../gluon/doc" }
# gluon_format = { version = "0.17", path = "../gluon/format" }

# gluon = { version = "0.17", git = "https://github.com/Marwes/gluon", branch = "http" }
# gluon_base = { version = "0.17", git = "https://github.com/Marwes/gluon", branch = "http" }
# gluon_check = { version = "0.17", git = "https://github.com/Marwes/gluon", branch = "http" }
# gluon_vm = { version = "0.17", git = "https://github.com/Marwes/gluon", branch = "http" }
# gluon_doc = { version = "0.17", git = "https://github.com/Marwes/gluon", branch = "http" }
# gluon_format = { version = "0.17", git = "https://github.com/Marwes/gluon", branch = "http" }
