[package]
name = "gluon_crates_io"
version = "0.1.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]

edition = "2018"

[dependencies]
gluon = { version = "0.13", features = ["serialization", "web", "regex", "rand"] }
gluon_format = { version = "0.13" }
gluon_doc = { version = "0.13" }

futures = "0.1"
failure = "0.1"
