[package]
name = "gluon_crates_io"
version = "0.1.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]

edition = "2018"

[dependencies]
gluon = { version = "0.17", features = ["serialization", "regex", "rand"] }
gluon_format = { version = "0.17" }
gluon_doc = { version = "0.17" }

futures = "0.3"
anyhow = "1"
